--- a/Correlation_visuals.ipynb
+++ b/Correlation_visuals.ipynb
@@ -725,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the examples above, all the data for both stcks is considered when calculating correlation. \n",
+    "In the examples above, all the data for both stocks is considered when calculating correlation. \n",
     "\n",
     "Below, a rolling correlation we be created over a fixed window of time, i.e. 6 months (1/2 a year), in order to see if correlation is changing over time."
    ]
@@ -757,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The blue line shows the rolling correlation between the two stocks (Aaple and WTI), and the red line is the fixed correlation overall i.e. 0.26. The graph shows that the two stocks remain positively correlated until between 2017 - 2018."
+    "The blue line shows the rolling correlation between the two stocks (Apple and WTI), and the red line is the fixed correlation overall i.e. 0.26. The graph shows that the two stocks remain positively correlated until between 2017 - 2018."
    ]
   }
  ],
